--- a/public/css/10/main.css
+++ b/public/css/10/main.css
@@ -337,7 +337,7 @@ h2 {
   }
 }
 
-@media only screen and (max-device-width: 768px) and (min-device-height: 1024px) {
+@media only screen and (min-width: 771px) {
 	.contact a > div {-webkit-animation: none}
 	.contact a:hover > div {-webkit-animation: none}
 
@@ -390,7 +390,7 @@ h2 {
 }
 
 
-@media only screen and (max-device-width : 320px) and (min-device-height : 480px) { 
+@media only screen and (max-width : 509px) { 
 	.contact a > div {-webkit-animation: none}
 	.contact a:hover > div {-webkit-animation: none}
 
