--- a/public/css/10/main.css
+++ b/public/css/10/main.css
@@ -338,9 +338,6 @@ h2 {
 }
 
 @media only screen and (min-width: 771px) {
-	.contact a > div {-webkit-animation: none}
-	.contact a:hover > div {-webkit-animation: none}
-
 	#content {
 		width: 500px;
 	}
@@ -390,10 +387,12 @@ h2 {
 }
 
 
-@media only screen and (max-width : 509px) { 
+@media only screen and (max-device-width: 320px) {
 	.contact a > div {-webkit-animation: none}
 	.contact a:hover > div {-webkit-animation: none}
+}
 
+@media only screen and (max-width : 509px) { 
 	#heading {
 		margin-top: 0.75em;
 		margin-left: 0.2em;
