Update deploy file and docker build

--- a/public/js/layouts/app.html
+++ b/public/js/layouts/app.html
@@ -12,7 +12,7 @@
 		<script type="text/javascript" src="//use.typekit.net/nmr0cyp.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <script data-main="/js/app.js" src="/js/require-2.1.11.js"></script>  		
-		<link rel="stylesheet" type="text/css" media="screen" href="/css/10/main.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="/css/main.css">
 	</head>
 	<body id="app">
 		{{{content}}}
