~Deploy Script Update Generated Files~

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -96,28 +96,28 @@ body {
 #facebook {
 	height: 80px;
   width: 80px;
-	background: url(//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/facebook.png) no-repeat;
+	background: url(//do5izgzd6lf15.cloudfront.net/045111c//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/facebook.png) no-repeat;
   background-size: 80px 80px;	
 }
 
 #linkedin {
 	height: 80px;
   width: 80px;	
-	background: url(//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/linkedin.png) no-repeat;
+	background: url(//do5izgzd6lf15.cloudfront.net/045111c//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/linkedin.png) no-repeat;
   background-size: 80px 80px;	
 }
 
 #twitter {
 	height: 80px;
   width: 80px;	
-	background: url(//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/twitter.png) no-repeat;
+	background: url(//do5izgzd6lf15.cloudfront.net/045111c//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/twitter.png) no-repeat;
   background-size: 80px 80px;	
 }
 
 #github {
 	height: 80px;
   width: 80px;
-	background: url(//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/github.png) no-repeat;
+	background: url(//do5izgzd6lf15.cloudfront.net/045111c//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/github.png) no-repeat;
   background-size: 80px 80px;
 }
 
@@ -314,25 +314,25 @@ h2 {
   #facebook {
   	height: 80px;
   	width: 80px;
-    background: url(//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/facebook@2x.png) no-repeat;
+    background: url(//do5izgzd6lf15.cloudfront.net/045111c//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/facebook@2x.png) no-repeat;
     background-size: 80px 80px;
   }
   #linkedin {
   	height: 80px;
   	width: 80px;
-  	background: url(//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/linkedin@2x.png) no-repeat;
+  	background: url(//do5izgzd6lf15.cloudfront.net/045111c//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/linkedin@2x.png) no-repeat;
   	background-size: 80px 80px;
   }
   #twitter {
   	height: 80px;
   	width: 80px;
-  	background: url(//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/twitter@2x.png) no-repeat;
+  	background: url(//do5izgzd6lf15.cloudfront.net/045111c//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/twitter@2x.png) no-repeat;
   	background-size: 80px 80px;
   }
   #github {
   	height: 80px;
   	width: 80px;
-  	background: url(//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/github@2x.png) no-repeat;
+  	background: url(//do5izgzd6lf15.cloudfront.net/045111c//do5izgzd6lf15.cloudfront.net/e4acce2/img/2/github@2x.png) no-repeat;
   	background-size: 80px 80px;
   }
 }
