--- a/public/js/layouts/app.html
+++ b/public/js/layouts/app.html
@@ -9,21 +9,10 @@
 
 		<script type="text/javascript" src="//use.typekit.net/nmr0cyp.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    <script data-main="https://do5izgzd6lf15.cloudfront.net/7fa8e5d/js/app.min.js" src="https://do5izgzd6lf15.cloudfront.net/7fa8e5d/js/require-2.1.11.js"></script>  		
-		<link rel="stylesheet" type="text/css" media="screen" href="https://do5izgzd6lf15.cloudfront.net/7fa8e5d/css/main.css"/>
+    <script data-main="/js/app.js" src="/js/require-2.1.11.js"></script>  		
+		<link rel="stylesheet" type="text/css" media="screen" href="/css/main.css"/>
 	</head>
 	<body id="app">
 		{{{content}}}
-	
-
-
-
-
-
-
-
-
-
-
 
 </body></html>
